--- a/microscope/client/views/application/layout.html
+++ b/microscope/client/views/application/layout.html
@@ -3,7 +3,8 @@
 		<header class="navbar navbar-default">
 			<div class="container">
 			<div class="navbar-header">
-				<a class="navbar-brand" href="{{pathFor 'postsList'}}">Microscope</a></div>
+				<a class="navbar-brand" href="{{pathFor 'postsList'}}">{{pageTitle}}</a>
+			</div>
 			</div>
 		</header>
 		
